--- a/style.css
+++ b/style.css
@@ -1,1 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+body {
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 200;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/sourcesanspro/v18/6xKydSBYKcSV-LCoeQqfX1RYOo3i94_wmhduz8A.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+    background-color: #eee;
+}
+.date {
+    padding: 1em;
+}
+.newspaper-container {
+    width: 700px;
+    margin: 3em auto;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: #ddd;
+}
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding-left: 30px;
+}
+nav li  {
+    display: inline-block;
+    padding: .5em;
+}
+nav {
+     border-top: 1px solid #eee;
+     border-bottom: 1px solid #eee;
+     padding: 5px 0;
+     margin: 1px 0;
+ }
+nav a {
+    font-size: .9em;
+    color: #777;
+}
+h1 {
+    text-align: center;
+    font-family: 'Abril Fatface';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/abrilfatface/v12/zOL64pLDlL1D99S8g8PtiKchq-lmjdLh.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+    font-size: 4em;
+}
+main h2{
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/robotoslab/v16/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjovoSmYmRjRdE.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+    padding: 13px;
+}
+main h5 {
+    font-family: 'Abril Fatface';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/abrilfatface/v12/zOL64pLDlL1D99S8g8PtiKchq-lmjdLh.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+    color: red;
+    padding-left: 10px;
+    font-size: 18px;
+}
+.more-articles {
+    display: inline-block;
+    border-top: 2px solid #eee;
+    text-align: center;
+}
+section {
+    display: inline-block;
+    margin: 0 1em;
+    width:44%;
+}
+.more-articles img {
+    width: 100%;
+}
+
+   
